@@ -1,0 +1,10 @@
+{
+"name" : "Gtk 2 Classes Plugin",
+"version" : "0.0.1",
+"toolkitname" : "Gtk 2 Classes",
+"usefor" : "C++"
+}
+
+
+
+
